package app.producers;

public class ActiveSports implements Producer {
    @Override
    public String brandName() {
        return "Active Sports";
    }
}
