package app.producers;

public interface Producer {
    String brandName();
}
