package app.producers;

public class SmartCaps implements Producer {
    @Override
    public String brandName() {
        return "Smart Caps";
    }
}
