package app.products;

public class CapBlack extends Cap {
    @Override
    public float price() {
        return 5.99f;
    }

    @Override
    public String name() {
        return "Black Cap";
    }
}
